#[cfg(test)]
mod tests {
    use learning_platform_server::grpc::{
        course_service::CourseService,
        enrollment_service::EnrollmentService,
        credential_service::CredentialService,
        tip_service::TipService,
        auth_service::AuthService,
        user_service::UserService,
        health_service::HealthService,
    };
    use learning_platform_server::database::repository::DatabaseRepository;
    use sqlx::PgPool;
    
    // Helper function to create a test database pool
    async fn create_test_pool() -> PgPool {
        let db_url = std::env::var("DATABASE_URL")
            .unwrap_or_else(|_| "postgresql://localhost/learning_platform".to_string());
        PgPool::connect(&db_url).await.unwrap()
    }
    
    #[tokio::test]
    async fn test_course_service_creation() {
        let pool = create_test_pool().await;
        let repository = DatabaseRepository::new(pool);
        let service = CourseService::new(repository);
        
        // This test just ensures the service can be created
        assert!(true);
    }
    
    #[tokio::test]
    async fn test_enrollment_service_creation() {
        let pool = create_test_pool().await;
        let repository = DatabaseRepository::new(pool);
        let service = EnrollmentService::new(repository);
        
        // This test just ensures the service can be created
        assert!(true);
    }
    
    #[tokio::test]
    async fn test_credential_service_creation() {
        let pool = create_test_pool().await;
        let repository = DatabaseRepository::new(pool);
        let service = CredentialService::new(repository);
        
        // This test just ensures the service can be created
        assert!(true);
    }
    
    #[tokio::test]
    async fn test_tip_service_creation() {
        let pool = create_test_pool().await;
        let repository = DatabaseRepository::new(pool);
        let service = TipService::new(repository);
        
        // This test just ensures the service can be created
        assert!(true);
    }
    
    #[tokio::test]
    async fn test_auth_service_creation() {
        let pool = create_test_pool().await;
        let repository = DatabaseRepository::new(pool);
        let service = AuthService::new(repository);
        
        // This test just ensures the service can be created
        assert!(true);
    }
    
    #[tokio::test]
    async fn test_user_service_creation() {
        let pool = create_test_pool().await;
        let repository = DatabaseRepository::new(pool);
        let service = UserService::new(repository);
        
        // This test just ensures the service can be created
        assert!(true);
    }
    
    #[test]
    fn test_health_service_creation() {
        let service = HealthService::new();
        
        // This test just ensures the service can be created
        assert!(true);
    }
}